Remove per-edge timing allocations and cache trigger signals