@@ -10,6 +10,7 @@ import com.foreverspark.logicsim.editor.model.EditorNode;
 import com.foreverspark.logicsim.editor.model.NodeKind;
 import com.foreverspark.logicsim.editor.model.WireConnection;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.Map;
@@ -25,19 +26,22 @@ public final class CircuitTimingController {
 
     private static final class RandomState {
         private final Signal output;
+        private final Signal trigger;
         private int chancePercent;
         private boolean lastHigh;
 
-        private RandomState(Signal output, int chancePercent, boolean lastHigh) {
+        private RandomState(Signal output, Signal trigger, int chancePercent) {
             this.output = output;
+            this.trigger = trigger;
             this.chancePercent = chancePercent;
-            this.lastHigh = lastHigh;
+            this.lastHigh = trigger != null && trigger.value() == LogicValue.HIGH;
         }
     }
 
     private final CompiledCircuit compiled;
     private final Map<ClockAddress, TimingSignalDriver> clocks = new LinkedHashMap<>();
-    private final Set<ClockAddress> wiredEnableInputs = new LinkedHashSet<>();
+    /** Only clocks with a physically wired ENABLE input appear here. The Signal handle is cached once. */
+    private final Map<ClockAddress, Signal> clockEnableSignals = new LinkedHashMap<>();
     private final Map<RandomAddress, RandomState> randomSources = new LinkedHashMap<>();
 
     public CircuitTimingController(CompiledCircuit compiled, CircuitDocument root, ChipLookup chips) {
@@ -47,14 +51,15 @@ public final class CircuitTimingController {
         collect(root, chips == null ? ChipLookup.empty() : chips, CompiledCircuit.ROOT_SCOPE, Set.of());
     }
 
-    public Set<ClockAddress> clocks() { return Set.copyOf(clocks.keySet()); }
+    /** Stable read-only views; constructing Set.copyOf on every worker slice was unnecessary allocation. */
+    public Set<ClockAddress> clocks() { return Collections.unmodifiableSet(clocks.keySet()); }
     public boolean hasClock(String scopePath, int nodeId) { return clocks.containsKey(address(scopePath, nodeId)); }
     public long frequencyHz(String scopePath, int nodeId) { return require(scopePath, nodeId).timing().frequencyHz(); }
     public void setFrequencyHz(String scopePath, int nodeId, long frequencyHz) { require(scopePath, nodeId).timing().setFrequencyHz(frequencyHz); }
     public boolean running(String scopePath, int nodeId) { return require(scopePath, nodeId).timing().running(); }
     public void setRunning(String scopePath, int nodeId, boolean running) { require(scopePath, nodeId).timing().setRunning(running); }
 
-    public Set<RandomAddress> randomSources() { return Set.copyOf(randomSources.keySet()); }
+    public Set<RandomAddress> randomSources() { return Collections.unmodifiableSet(randomSources.keySet()); }
     public boolean hasRandom(String scopePath, int nodeId) { return randomSources.containsKey(randomAddress(scopePath, nodeId)); }
     public int randomChancePercent(String scopePath, int nodeId) { return requireRandom(scopePath, nodeId).chancePercent; }
     public void setRandomChancePercent(String scopePath, int nodeId, int chancePercent) {
@@ -64,9 +69,8 @@ public final class CircuitTimingController {
     public boolean enabled(String scopePath, int nodeId) {
         ClockAddress address = address(scopePath, nodeId);
         require(scopePath, nodeId);
-        if (!wiredEnableInputs.contains(address)) return true;
-        LogicValue[] values = compiled.inputValues(address.scopePath(), address.nodeId(), 0);
-        return values.length == 1 && values[0] == LogicValue.HIGH;
+        Signal enable = clockEnableSignals.get(address);
+        return enable == null || enable.value() == LogicValue.HIGH;
     }
 
     public boolean active(String scopePath, int nodeId) {
@@ -96,7 +100,9 @@ public final class CircuitTimingController {
         for (Map.Entry<ClockAddress, TimingSignalDriver> entry : clocks.entrySet()) {
             ClockAddress address = entry.getKey();
             TimingSignalDriver clock = entry.getValue();
-            if (!clock.timing().running() || !enabled(address.scopePath(), address.nodeId())) continue;
+            if (!clock.timing().running()) continue;
+            Signal enable = clockEnableSignals.get(address);
+            if (enable != null && enable.value() != LogicValue.HIGH) continue;
             long next = clock.advanceNanos(elapsedNanos, edgeBudgetPerClock, callback);
             emitted = emitted > Long.MAX_VALUE - next ? Long.MAX_VALUE : emitted + next;
         }
@@ -105,7 +111,8 @@ public final class CircuitTimingController {
 
     /**
      * Samples every RANDOM source only on a trigger LOW -> HIGH transition.
-     * Holding TRIGGER at HIGH does nothing; it must return LOW before another sample can occur.
+     * Trigger Signal handles are cached during compile, so the MHz hot path performs no LogicValue[] allocation
+     * and no scope/NodePortKey lookup for every edge.
      */
     public int processRandomSources() {
         if (randomSources.isEmpty()) return 0;
@@ -113,10 +120,8 @@ public final class CircuitTimingController {
         int maxPasses = Math.max(4, randomSources.size() * 4 + 4);
         for (int pass = 0; pass < maxPasses; pass++) {
             boolean outputChanged = false;
-            for (Map.Entry<RandomAddress, RandomState> entry : randomSources.entrySet()) {
-                RandomAddress address = entry.getKey();
-                RandomState state = entry.getValue();
-                boolean high = triggerHigh(address);
+            for (RandomState state : randomSources.values()) {
+                boolean high = state.trigger != null && state.trigger.value() == LogicValue.HIGH;
                 boolean rising = high && !state.lastHigh;
                 state.lastHigh = high;
                 if (!rising) continue;
@@ -133,8 +138,8 @@ public final class CircuitTimingController {
 
     /** Aligns RANDOM edge memory to the current trigger levels without emitting a new value. */
     public void synchronizeRandomInputs() {
-        for (Map.Entry<RandomAddress, RandomState> entry : randomSources.entrySet()) {
-            entry.getValue().lastHigh = triggerHigh(entry.getKey());
+        for (RandomState state : randomSources.values()) {
+            state.lastHigh = state.trigger != null && state.trigger.value() == LogicValue.HIGH;
         }
     }
 
@@ -154,10 +159,12 @@ public final class CircuitTimingController {
                 node.width = 1;
                 node.constantValue = 0L;
                 node.randomChancePercent = Math.max(0, Math.min(100, node.randomChancePercent));
-                Signal signal = compiled.simulator().signalByPath(constantSignalPath(scope, node.id));
-                if (signal == null) throw new IllegalStateException("Compiled RANDOM signal not found: " + scope + "/" + node.id);
+                Signal output = compiled.simulator().signalByPath(constantSignalPath(scope, node.id));
+                if (output == null) throw new IllegalStateException("Compiled RANDOM signal not found: " + scope + "/" + node.id);
+                Signal trigger = compiled.inputSignal(scope, node.id, 0, 0);
+                if (trigger == null) throw new IllegalStateException("Compiled RANDOM trigger not found: " + scope + "/" + node.id);
                 RandomAddress randomAddress = new RandomAddress(scope, node.id);
-                randomSources.put(randomAddress, new RandomState(signal, node.randomChancePercent, triggerHigh(randomAddress)));
+                randomSources.put(randomAddress, new RandomState(output, trigger, node.randomChancePercent));
             } else if (node.kind == NodeKind.CONSTANT && node.clockSource) {
                 node.width = 1;
                 node.constantValue = 0L;
@@ -167,7 +174,11 @@ public final class CircuitTimingController {
                 if (signal == null) throw new IllegalStateException("Compiled CLOCK signal not found: " + scope + "/" + node.id);
                 ClockAddress clockAddress = new ClockAddress(scope, node.id);
                 clocks.put(clockAddress, new TimingSignalDriver(frequency, compiled.simulator(), signal, EDGE_SETTLE_BUDGET));
-                if (hasEnableWire(document, node.id)) wiredEnableInputs.add(clockAddress);
+                if (hasEnableWire(document, node.id)) {
+                    Signal enable = compiled.inputSignal(scope, node.id, 0, 0);
+                    if (enable == null) throw new IllegalStateException("Compiled CLOCK enable not found: " + scope + "/" + node.id);
+                    clockEnableSignals.put(clockAddress, enable);
+                }
             }
 
             if (node.kind != NodeKind.CUSTOM_CHIP) continue;
@@ -179,11 +190,6 @@ public final class CircuitTimingController {
             nestedStack.add(chipName);
             collect(definition.circuit, chips, CompiledCircuit.childScopePath(scope, node.id, chipName), Set.copyOf(nestedStack));
         }
-    }
-
-    private boolean triggerHigh(RandomAddress address) {
-        LogicValue[] values = compiled.inputValues(address.scopePath(), address.nodeId(), 0);
-        return values.length == 1 && values[0] == LogicValue.HIGH;
     }
 
     private static boolean sampleHigh(int chancePercent) {
